welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: ')' expected but 'true' found.
  if (is Summer ==true){
                  ^squirrelPlay:14: error: illegal start of simple expression
} 
^